Fix responsive on mobile and update colors

--- a/assets/stylesheet/main.css
+++ b/assets/stylesheet/main.css
@@ -9,11 +9,16 @@ body {
 	font-size: large;
 }
 
-.album-photo {
-	height: 180px;
-	width: 180px;
+.album-photo img {
+	height: 160px;
+	width: 160px;
+	margin: 10px;
 	background-color: transparent;
-  	box-shadow: 5px 5px #000;
+  	box-shadow: 5px 5px #1d72aa;
+}
+
+.hero .hero-body, .buttons .is-primary {
+	background-color: #1DB954;
 }
 
 .hero .song-body {
@@ -26,55 +31,71 @@ body {
 .hero .song-title, .hero .song-subtitle {
 	margin-left: 25px;
 	margin-top: 30px;
+	margin-right: 100px;
 }
 
 .hero .song-subtitle {
 	margin-bottom: 30px;
 }
 
-@media screen and (min-width: 700px) and (max-height: 1399px) {
+.hero .title{
+	font-size: 1.5em;
+}
+
+.hero .subtitle {
+	font-size: 1.0em;
+}
+
+.hero .song-title {
+	font-size: 1.7em;
+}
+
+.hero .song-subtitle {
+	font-size: 1.2em;
+}
+
+@media screen and (max-width: 550px) {
+	.album-photo img {
+		height: 120px;
+		width: 120px;
+	}
+
+	.hero .song-title {
+		font-size: 1.6em;
+	}
+
+	.hero .song-subtitle {
+		font-size: 1.1em;
+	}
+}
+
+@media screen and (min-width: 850px) and (max-height: 1300px) {
 	.container {
 		width: 80%;
 	}
 
-	.album-photo {
-		height: 220px;
-		width: 220px;
-	}
-
-	.hero .title{
-		font-size: 1.7em;
-	}
-
-	.hero .subtitle {
-		font-size: 1.2em;
+	.album-photo img {
+		height: 200px;
+		width: 200px;
 	}
 
 	.hero .song-title {
-		font-size: 2.0em;
+		font-size: 1.9em;
 	}
 
 	.hero .song-subtitle {
-		font-size: 1.5em;
+		font-size: 1.4em;
 	}
 }
 
-@media screen and (min-width: 1400px) {
+@media screen and (min-width: 1300px) {
 	.container {
 		width: 60%;
 	}
 
-	.album-photo {
+	.album-photo img {
 		height: 260px;
 		width: 260px;
-	}
-
-	.hero .title{
-		font-size: 2em;
-	}
-
-	.hero .subtitle {
-		font-size: 1.5em;
 	}
 
 	.hero .song-title {
